fixed error okay button alignment

--- a/views/styles/style.css
+++ b/views/styles/style.css
@@ -212,6 +212,10 @@ body > main > div.response-container > div.loader {
   overflow: auto;
 }
 .error-overlay .btn {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   margin-top: 10px;
   display: flex;
   justify-content: center;
